tests/suite/snapshots/suite__check__tests__check__bad_invariant_assign.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_invariant_assign.xi:7:5]
   │
 7 │     a: A[] = c
   ·     ───┬──  
   ·        ╰──── Expected A[] but found C[]
───╯

